Bug 359535 - Activity Settings have "Act like" selectbox even on desktop computers
Summary: Activity Settings have "Act like" selectbox even on desktop computers
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.5.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-18 14:21 UTC by Thomas Pfeiffer
Modified: 2016-03-07 13:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Pfeiffer 2016-02-18 14:21:48 UTC
The Power Management KCM does not distinguish between AC, battery and low battery when on a machine without a battery (which makes perfect sense), but the "Activity Settings" tab there is still the "Act like" selectbox, which doesn't make sense in this situation.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2016-03-07 13:30:43 UTC
Git commit 1cf565eeb3ddc98a2df0066b4e5258aaf1e25008 by Kai Uwe Broulik.
Committed on 07/03/2016 at 13:30.
Pushed by broulik into branch 'Plasma/5.6'.

[Activity Settings] Hide "Act like" setting if there's no batteries
FIXED-IN: 5.6.0

M  +9    -9    daemon/powerdevilcore.cpp
M  +14   -0    kcmodule/activities/activitywidget.cpp

http://commits.kde.org/powerdevil/1cf565eeb3ddc98a2df0066b4e5258aaf1e25008