[Activity Settings] Hide "Act like" setting if there's no batteries

BUG: 359535
FIXED-IN: 5.6.0